--- a/Solution1/Accounts.Model/Accounts.Model.csproj
+++ b/Solution1/Accounts.Model/Accounts.Model.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Model\Supplier.cs" />
     <Compile Include="Model\Tax.cs" />
     <Compile Include="Model\TaxCategory.cs" />
+    <Compile Include="Model\UnitRelations.cs" />
     <Compile Include="Model\WareHouse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Unit.cs" />
